vsjava2e-code/code/codewitherror/shoutput/compileAirportNames.sh.output
fpij/AirportNames.java:10: error: 
  unreported exception IOException; must be caught or declared to be thrown
      .map(iataCode -> AirportInfo.getNameOfAirport(iataCode))
                                                   ^
1 error
